--- a/css/style.css
+++ b/css/style.css
@@ -1219,7 +1219,7 @@ outline: 1px solid var(--c-accent);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: auto;
+    width: 276px;
     font-size: 36px;
     line-height: 150%;
   }
